--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_blue_plus: ^1.26.4
   venice_core:
     git: https://github.com/Venice-D2D/venice_core.git
 
